--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,116 @@
     <link href="../dist/output.css" rel="stylesheet" />
     <script defer src="./assets/fontawesome/js/solid.min.js"></script>
     <script defer src="./assets/fontawesome/js/fontawesome.min.js"></script>
+    <script>
+      window.onload = () => {
+        const mobileMenuButton = document.getElementById("mobile-menu-button");
+        mobileMenuButton.addEventListener("click", () => {
+          if (mobileMenuButton.classList.contains("open")) {
+            mobileMenuButton.classList.remove("open");
+          } else {
+            mobileMenuButton.classList.add("open");
+          }
+        });
+        const ticketsMenuItem = document.getElementById("ticket-menu-item");
+        ticketsMenuItem.addEventListener("click", () => {
+          if (ticketsMenuItem.classList.contains("open")) {
+            ticketsMenuItem.classList.remove("open");
+          } else {
+            ticketsMenuItem.classList.add("open");
+          }
+        });
+      };
+    </script>
   </head>
-  <body></body>
+  <body>
+    <header class="text-zinc-200">
+      <nav class="sticky top-0 flex bg-gradient-to-r from-rose-500 to-pink-500">
+        <div class="flex items-center gap-2 p-2">
+          <img src="./assets/images/logo-inverted.png" alt="logo" width="50" />
+          <div class="text-2xl font-bold">
+            tw:<span class="text-sky-900">mf</span>
+          </div>
+        </div>
+        <div class="my-auto ml-auto block cursor-pointer p-4 md:hidden">
+          <div id="mobile-menu-button" class="group peer">
+            <div
+              class="relative top-0 h-1 w-8 rounded-full bg-zinc-200 transition-all group-open:top-2 group-open:rotate-45"
+            ></div>
+            <div
+              class="mt-1 h-1 w-8 rounded-full bg-zinc-200 opacity-100 transition-all group-open:opacity-0"
+            ></div>
+            <div
+              class="group-open:-t-2 relative top-0 mt-1 h-1 w-8 rounded-full bg-zinc-200 transition-all group-open:-top-2 group-open:-rotate-45"
+            ></div>
+          </div>
+          <div
+            class="absolute top-[62px] left-0 hidden w-full bg-gradient-to-r from-rose-500 to-pink-500 peer-open:block"
+          >
+            <div
+              class="hover: relative flex h-full cursor-pointer items-center justify-center p-4 font-bold text-pink-200 transition-colors hover:bg-white/10 hover:text-zinc-200"
+            >
+              <span>Home</span>
+            </div>
+            <div
+              class="hover: relative flex h-full cursor-pointer items-center justify-center p-4 font-bold text-pink-200 transition-colors hover:bg-white/10 hover:text-zinc-200"
+            >
+              <span>Lineup</span>
+            </div>
+            <div
+              id="ticket-menu-item"
+              class="group relative h-full cursor-pointer items-center justify-center text-pink-200 transition-colors hover:bg-white/10 hover:text-zinc-200"
+            >
+              <div class="p-4 text-center font-bold">Tickets</div>
+              <div class="hidden group-open:block">
+                <div
+                  class="relative p-4 text-center text-pink-200 transition-colors ease-in-out hover:bg-white/5 hover:text-zinc-200"
+                >
+                  <span>Single day ticket</span>
+                </div>
+                <div
+                  class="relative p-4 text-center text-pink-200 transition-colors ease-in-out hover:bg-white/5 hover:text-zinc-200"
+                >
+                  <span>7 day ticket</span>
+                </div>
+              </div>
+            </div>
+            <div
+              class="hover: relative flex h-full cursor-pointer items-center justify-center p-4 font-bold text-pink-200 transition-colors hover:bg-white/10 hover:text-zinc-200"
+            >
+              <span>Support</span>
+            </div>
+          </div>
+        </div>
+        <ul class="hidden flex-1 items-center justify-end md:flex">
+          <li class="menu-item">
+            <span>Home</span>
+          </li>
+          <li class="menu-item">
+            <span>Linup</span>
+          </li>
+          <li class="menu-item group">
+            <span>Tickets</span>
+            <div
+              class="right-zero roundd-b-md absolute top-full hidden whitespace-nowrap bg-pink-500 text-right group-hover:block"
+            >
+              <div
+                class="ease-in--out cursor-pointer p-4 font-bold text-pink-200 transition-colors hover:bg-white/5 hover:text-zinc-200"
+              >
+                <span>Single day ticket</span>
+              </div>
+              <div
+                class="ease-in--out cursor-pointer p-4 font-bold text-pink-200 transition-colors hover:bg-white/5 hover:text-zinc-200"
+              >
+                <span>7 ticket</span>
+              </div>
+            </div>
+          </li>
+          <li class="menu-item">
+            <span>Support</span>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+  </body>
 </html>
