--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,49 @@
           </li>
         </ul>
       </nav>
+      <div
+        style="background-image: url('./assets/images/hero.jpg')"
+        class="min-h[400px] flex h-[calc(100svh-200px)] flex-col items-center justify-center bg-cover bg-fixed bg-center"
+      >
+        <div
+          class="rounded-xl bg-white/30 py-2 px-4 text-center backdrop-blur-md"
+        >
+          <div class="relative">
+            <img
+              src="./assets/images/logo.png"
+              alt="logo"
+              width="175"
+              class=""
+            />
+            <div class='flex item-center justify-center mt-[-70px] mb-5'>
+              <div class='flex items-center justify-center bg-pink-500 rounded-full w-14 h-14 gap-1'>
+                <div class='h-2 w-1 bg-pink-300 rounded-full animate-wavey'></div>
+                <div class='w-1 h-3 bg-pink-200 rounded-full animate-wavey animation-delay-200'></div>
+                <div class='w-1 h-4 bg-pink-100 rounded-full animate-wavey animation-delay-[150ms]'></div>
+                <div class='w-1 h-3 bg-pink-200 rounded-full animate-wavey animation-delay-300'></div>
+                <div class='h-2 w-1 bg-pink-300 rounded-full animate-wavey animation-delay-[75ms]'></div>
+              </div>
+            </div>
+          </div>
+          <div class="text-5xl font-bold">
+            tw:<span class="text-sky-900">mf</span>
+          </div>
+        </div>
+        <div class="mt-3 text-sm font-bold">
+          Keep me updated with news and promotions
+        </div>
+        <form class="mt-3 flex gap-2">
+          <input
+            type="email"
+            placeholder="email"
+            class="rounded-sm border border-white/40 bg-white/30 p-2 font-bold text-sky-900 placeholder-zinc-500 caret-pink-500 outline-pink-500 backdrop-blur-md focus:outline"
+          />
+        <button type='submit'
+          class="cursor-pointer rounded-sm bg-pink-500 py-2 px-4 font-bold transition-colors hover:bg-sky-900 hover:shadow-lg hover:shadow-black/20"
+        >
+          Subscribe
+        </button>
+      </form>
     </header>
     <main></main>
   </body>
